--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "jquery": "^3.0.0",
+    "layzr.js": "^2.2.2",
     "popper.js": "^1.11.0"
   }
 }
