--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.0.0-beta",
     "jquery": "^3.0.0",
     "layzr.js": "^2.2.2",
+    "lodash": "^4.17.4",
     "popper.js": "^1.11.0"
   }
 }
